correction padding sur activite_marseille version mobile

--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ footer a:hover{
     #activites_marseille{
         height:auto;
         width:90%;
-        padding:0px;
+        padding:20px 0px 0px 0px;
         margin-top: 0px;
         margin-right:auto;
         margin-bottom: 20px;
